--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,21 @@ edition = "2021"
 [dependencies]
 my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
 rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
+
 flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }
 async-trait = "*"
 serde = "*"
 serde_derive = "*"
 serde_json = "*"
+
+tokio = { version = "*", features = ["full"] }
+tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
+anyhow = "*"
+prost = "*"
+prost-types = "*"
+futures-core = "*"
+futures = "*"
+futures-util = "*"
+
+[build-dependencies]
+ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
